# yt-transcriber

./: .SRCINFO  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  bun.lockb  install.sh  package.json  tsconfig.json
.github/workflows/: pr.yml  release.yml
aur/: .SRCINFO  PKGBUILD
aur-bin/: .SRCINFO  PKGBUILD  yt-transcriber.install
docs/: README.md
src/: index.ts  main.rs
src/commands/: extract.ts
src/extractors/: youtube.ts
src/formatters/: index.ts  json.ts  srt.ts  txt.ts
src/types/: index.ts
src/utils/: time.ts  url-parser.ts
